http://bugzilla.zimbra.com/show_bug.cgi?id=10214 Bug: 10214 DwtSelect on Safari

--- a/Ajax/WebRoot/js/config/style/dwt.css
+++ b/Ajax/WebRoot/js/config/style/dwt.css
@@ -319,12 +319,9 @@
 }
 
 .DwtSelectComposite {
-	overflow-x:hidden;
 }
 .DwtSelectCompositeHeight {
 	height:24px;
-
-	overflow-x:hidden;
 }
 .DwtSelectCompositeMenu {
 	@MenuContainer@
